log
Thu Mar 17 20:31:15 HSP 2022: 
 list.c | 45 ++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 38 insertions(+), 7 deletions(-)
 tests:  9|3
total_score: 35/70
251463e
Thu Mar 17 20:38:09 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
d13497d
Thu Mar 17 20:41:11 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
d14f369
Thu Mar 17 21:26:26 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
60d0c96
Sat Mar 19 17:24:34 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ab090cb
Sat Mar 19 17:25:16 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:79:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b79855f
Sat Mar 19 17:35:29 HSP 2022: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
69e32a0
Sat Mar 19 17:41:45 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5929d4e
Sat Mar 19 17:42:14 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
064a0b3
